student_service_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service-deployment
spec:
  selector:
    matchLabels:
      app: student-service
  replicas: 1
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
        - name: student-service-container
          image: satijarahul/studentservicemvp4:main
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
