student_service_k8s_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service-svc
spec:
  selector:
    app: student-service
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
